[hotfix] Shorten longer username in profile menu to prevent overflow

--- a/ui/src/app/core/components/toolbar/toolbar.component.scss
+++ b/ui/src/app/core/components/toolbar/toolbar.component.scss
@@ -62,3 +62,7 @@
   padding: 5px;
   border-radius: 2px;
 }
+
+.user-email {
+  font-size: 11pt;
+}
